cmake_minimum_required(VERSION 3.11)


message("   Subdir qhy")


add_library(qhy OBJECT ${CMAKE_CURRENT_SOURCE_DIR}/QHYoacam.c ${CMAKE_CURRENT_SOURCE_DIR}/QHYconnect.c ${CMAKE_CURRENT_SOURCE_DIR}/QHYfirmware.c ${CMAKE_CURRENT_SOURCE_DIR}/QHYcontrol.c ${CMAKE_CURRENT_SOURCE_DIR}/QHYcallback.c ${CMAKE_CURRENT_SOURCE_DIR}/QHYgetState.c ${CMAKE_CURRENT_SOURCE_DIR}/QHYusb.c ${CMAKE_CURRENT_SOURCE_DIR}/QHY5.c ${CMAKE_CURRENT_SOURCE_DIR}/QHY5controller.c ${CMAKE_CURRENT_SOURCE_DIR}/QHY5II.c ${CMAKE_CURRENT_SOURCE_DIR}/QHY5IIcontroller.c ${CMAKE_CURRENT_SOURCE_DIR}/QHY5LII.c ${CMAKE_CURRENT_SOURCE_DIR}/QHY5LIIcontroller.c ${CMAKE_CURRENT_SOURCE_DIR}/QHY6.c ${CMAKE_CURRENT_SOURCE_DIR}/QHY6controller.c ${CMAKE_CURRENT_SOURCE_DIR}/IMG132E.c ${CMAKE_CURRENT_SOURCE_DIR}/IMG132Econtroller.c )

target_include_directories(qhy PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../include/  ${CMAKE_CURRENT_SOURCE_DIR}/../../ext/libASICamera2/include ${CMAKE_CURRENT_SOURCE_DIR}/../  /usr/local/include) # TBD libusb properly

target_compile_definitions(qhy PRIVATE FXLOAD_PATH=${FXLOAD_PATH} FIRMWARE_QHY_PATH=${QHY_FIRMWARE_PATH})


